# meshcfo

./: .env.example  .gitignore  README.md  index.html  multi-agent-cfo-os-deck.html  pyproject.toml  requirements.txt
docs/: OPENLIT_INTEGRATION.md
spacetime/: README.md  client.py  spacetime.local.json
spacetime/spacetimedb/: Cargo.toml
spacetime/spacetimedb/src/: lib.rs
src/cme/: agent.py  cli.py  crewai_chp.py  governance.py  observability.py  openai_agents_backend.py
src/cme/db/: __init__.py  cockroachdb_layer.py
