[package]
name = "cfo_os"
version = "0.1.0"
edition = "2021"
description = "Multi-Agent CFO OS — SpacetimeDB module for real-time financial analysis orchestration"

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "2.4.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
